4/09/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Remove software requirement.
	* auto-release.sh: New release script.

4/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note.

4/05/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Fix cgdb.1 step.

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* aclocal.m4: Autogenerated.
	* config.h.in: Autogenerated.
	* configure: Autogenerated.
	* configure.in (VL_LIB_READLINE): Remove call. Configure readline
	using RL_LIB_READLINE_VERSION.
	(RL_LIB_READLINE_INCLUDES): Added.
	* config/readline_check_version.m4 (RL_LIB_READLINE_INCLUDES): Added.
	* various/Makefile.in: Autogenerated.

4/04/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add comment.
	* configure: Autogenerated.
	* conifgure.in: Remove comments.
	* config/readline.m4: Remove termcap possibility.
	* config/readline_check_version.m4: Ditto.

3/29/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add bug fix note.

3/14/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add release note.

3/07/2006 Bob Rossi <bob@brasko.net>
    
	* configure.in (AC_INIT): Version update for CVS.
	* configure: Autogenerated.

version 0.6.1 (03/06/2006):

3/06/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add release data.

3/06/2006 Bob Rossi <bob@brasko.net>

	* release-todo: Fix typo.

3/06/2006 Bob Rossi <bob@brasko.net>
    
	* configure.in (AC_INIT): Version update.
	* configure: Autogenerated.

3/06/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update for .6.1 release.

3/06/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion.
	* RELEASE_TODO: Fixed last bug I know of for .6.2.

3/05/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finished tab completion feature request.

3/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion (quoting lines).

3/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion.

3/01/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Another minor bug for .6.1
