@@ -6,9 +6,16 @@ if [ "$1" = "" ]; then
   exit
 fi
 
+CGDB_VERSION=$1
+CGDB_RELEASE=cgdb-$CGDB_VERSION
 CGDB_SOURCE_DIR=$PWD
-CGDB_BUILD_DIR=$PWD/../version.texi.builddir
+CGDB_BUILD_DIR=$PWD/version.texi.builddir
 CGDB_OUTPUT_LOG=$PWD/output.log
+
+################################################################################
+echo "-- Writing results of all commands in $CGDB_OUTPUT_LOG"
+################################################################################
+rm $CGDB_OUTPUT_LOG
 
 ################################################################################
 echo "-- Verify autotool versions"
@@ -35,12 +42,12 @@ fi
 ################################################################################
 echo "-- Update configure.in to reflect the new version number"
 ################################################################################
-perl -pi -e "s/AC_INIT\(cgdb, (.*)\)/AC_INIT\(cgdb, $1\)/g" configure.in
+perl -pi -e "s/AC_INIT\(cgdb, (.*)\)/AC_INIT\(cgdb, $CGDB_VERSION\)/g" configure.in
 
 ################################################################################
 echo "-- Regenerate the autoconf files"
 ################################################################################
-./autoregen.sh
+./autoregen.sh >> $CGDB_OUTPUT_LOG 2>&1
 
 ################################################################################
 echo "-- Get the new doc/version.texi file"
@@ -48,14 +55,14 @@ echo "-- Get the new doc/version.texi file"
 rm -fr $CGDB_BUILD_DIR
 mkdir $CGDB_BUILD_DIR
 cd $CGDB_BUILD_DIR
-$CGDB_SOURCE_DIR/configure --enable-maintainer-mode --with-readline=/home/bob/download/readline/readline-5.1/target
-make -s
+$CGDB_SOURCE_DIR/configure --enable-maintainer-mode --with-readline=/home/bob/download/readline/readline-5.1/target >> $CGDB_OUTPUT_LOG 2>&1
+make -s >> $CGDB_OUTPUT_LOG 2>&1
 cd doc/
 
 ################################################################################
 echo "-- Generate HTML manual"
 ################################################################################
-make html
+make html >> $CGDB_OUTPUT_LOG 2>&1
 if [ "$?" != "0" ]; then
   echo "make html failed."
   exit
@@ -64,7 +71,7 @@ fi
 ################################################################################
 echo "-- Generate HTML NO SPLIT manual"
 ################################################################################
-makeinfo --html -I $CGDB_SOURCE_DIR/doc --no-split -o cgdb-no-split.html $CGDB_SOURCE_DIR/doc/cgdb.texinfo
+makeinfo --html -I $CGDB_SOURCE_DIR/doc --no-split -o cgdb-no-split.html $CGDB_SOURCE_DIR/doc/cgdb.texinfo >> $CGDB_OUTPUT_LOG 2>&1
 if [ "$?" != "0" ]; then
   echo "make html no split failed."
   exit
@@ -73,7 +80,7 @@ fi
 ################################################################################
 echo "-- Generate TEXT manual"
 ################################################################################
-makeinfo --plaintext -I $CGDB_SOURCE_DIR/doc -o $CGDB_SOURCE_DIR/doc/cgdb.txt $CGDB_SOURCE_DIR/doc/cgdb.texinfo
+makeinfo --plaintext -I $CGDB_SOURCE_DIR/doc -o $CGDB_SOURCE_DIR/doc/cgdb.txt $CGDB_SOURCE_DIR/doc/cgdb.texinfo >> $CGDB_OUTPUT_LOG 2>&1
 if [ "$?" != "0" ]; then
   echo "make text failed."
   exit
@@ -82,7 +89,7 @@ fi
 ################################################################################
 echo "-- Generate PDF manual"
 ################################################################################
-make pdf
+make pdf >> $CGDB_OUTPUT_LOG 2>&1
 if [ "$?" != "0" ]; then
   echo "make pdf failed."
   exit
@@ -92,7 +99,7 @@ fi
 echo "-- Generate MAN page"
 ################################################################################
 rm $CGDB_SOURCE_DIR/doc/cgdb.1
-make cgdb.1
+make cgdb.1 >> $CGDB_OUTPUT_LOG 2>&1
 if [ "$?" != "0" ]; then
   echo "make cgdb failed."
   exit
@@ -102,7 +109,7 @@ fi
 echo "-- Update text help in CGDB"
 ################################################################################
 cd $CGDB_SOURCE_DIR
-perl ht.pl
+perl ht.pl >> $CGDB_OUTPUT_LOG 2>&1
 if [ "$?" != "0" ]; then
   echo "update text in CGDB failed."
   exit
@@ -111,7 +118,7 @@ fi
 ################################################################################
 echo "-- Update the ChangeLogs"
 ################################################################################
-echo -e "version $1 (`date +%d/%m/%Y`):\n" > datetmp.txt
+echo -e "version $CGDB_VERSION (`date +%d/%m/%Y`):\n" > datetmp.txt
 for I in `find . -name ChangeLog`; 
 do 
   cp $I $I.bak; 
@@ -123,27 +130,27 @@ rm datetmp.txt
 ################################################################################
 echo "-- Update the NEWS file"
 ################################################################################
-echo -e "cgdb-$1 (`date +%d/%m/%Y`)\n" > datetmp.txt
+echo -e "$CGDB_RELEASE (`date +%d/%m/%Y`)\n" > datetmp.txt
 cp NEWS NEWS.bak
 cat datetmp.txt NEWS.bak > NEWS
 rm NEWS.bak
 rm datetmp.txt
 
 ################################################################################
-echo "-- Creating the distrobution $PWD/tmp"
+echo "-- Creating the distrobution $CGDB_BUILD_DIR/tmp"
 ################################################################################
 cd $CGDB_BUILD_DIR
-make dist
+make dist >> $CGDB_OUTPUT_LOG 2>&1
 rm -fr tmp
 mkdir tmp
-mv cgdb-$1.tar.gz tmp/
+mv $CGDB_RELEASE.tar.gz tmp/
 cd tmp
-tar -zxvf cgdb-$1.tar.gz
+tar -zxvf $CGDB_RELEASE.tar.gz >> $CGDB_OUTPUT_LOG 2>&1
 mkdir builddir
 cd builddir
-../cgdb-$1/configure --with-readline=/home/bob/download/readline/readline-5.1/target --prefix=$PWD/../target
-make -s
-make install
+../$CGDB_RELEASE/configure --with-readline=/home/bob/download/readline/readline-5.1/target --prefix=$PWD/../target >> $CGDB_OUTPUT_LOG 2>&1
+make -s >> $CGDB_OUTPUT_LOG 2>&1
+make install >> $CGDB_OUTPUT_LOG 2>&1
 ../target/bin/cgdb --version
 
 ################################################################################
@@ -151,10 +158,10 @@ echo "-- Do a cvs update"
 ################################################################################
 # This fixes files that have a different time stamp, but are no different.
 cd $CGDB_SOURCE_DIR
-cvs update
+cvs update >> $CGDB_OUTPUT_LOG 2>&1
 
 ################################################################################
-echo "-- Create the cvs tag cgdb-$1"
+echo "-- Create the cvs tag $CGDB_RELEASE"
 ################################################################################
 # step 7, create the tag
-echo "cgdb-$1" | perl -pi -e 's/\./_/g' | xargs echo cvs tag
+echo "$CGDB_RELEASE" | perl -pi -e 's/\./_/g' | xargs echo cvs tag >> $CGDB_OUTPUT_LOG 2>&1
