@@ -1,5 +1,9 @@
 4/09/2006 Bob Rossi <bob@brasko.net>
 
+	* auto-release.sh: Update script.
+
+4/09/2006 Bob Rossi <bob@brasko.net>
+
 	* release-todo.txt: Remove software requirement.
 	* auto-release.sh: New release script.
 
